tests/health/gold/sdk/tests__lsp__member-definition-test.toit.gold
tests/lsp/member-definition-test.toit:25:5: error: Argument mismatch for 'member1'
Too few arguments provided
    member1
    ^~~~~~~
